--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   "dir": "auto",
   "lang": "en-US",
   "name": "Dharmzeey Shop - Complete Online Marketplace",
-  "short_name": "Dharmzeey",
+  "short_name": "Dharmzeey Shop",
   "start_url": "/"
 }
